fix slider and scrollbar

--- a/src/Slider/Slides/ScrollPage/ScrollPage.css
+++ b/src/Slider/Slides/ScrollPage/ScrollPage.css
@@ -42,6 +42,10 @@
     padding: 30px;
     box-shadow: 0 0 10px 1px #e3e3e3;
 }
+.message_block_text::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
 #pink_sperm_scroll_1{
     position: absolute;
     top: 20px;
